# academy-hub

./: Makefile
.github/workflows/: ci-cd.yml  ingestion.yml
docs/: README.md  api_reference.md  architecture.md
infrastructure/: docker-compose.yml  grafana-dashboard.json  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
infrastructure/docker-compose/: ingestion-service.yml  kafka-service.yml  loki-service.yml  mongodb-service.yml  monitoring-service.yml  monitoring-services.yml  otel-collector-service.yml  postgres-service.yml  processing-service.yml  promtail-service.yml  redis-service.yml  storage-service.yml  tracking-service.yml
infrastructure/grafana-provisioning/: notifiers.yaml
infrastructure/terraform/: alb.tf  api_gateway.tf  dynamodb.tf  ecs.tf  iam_roles.tf  kinesis.tf  main.tf  outputs.tf  security_groups.tf  variables.tf  vpc.tf
services/anomaly/src/: detect_anomalies.py  detect_anomalies_bert.py  train_bert.py  train_lstm.py  train_model.py
services/ingestion/: .env  Dockerfile  pyproject.toml
services/ingestion/src/application/services/: event_processor.py
services/ingestion/src/infrastructure/: factory.py
services/ingestion/src/infrastructure/messaging/: kafka_producer.py  kinesis_producer.py
services/ingestion/src/interface/api/: main.py  routes.py
services/monitoring/: Dockerfile
services/monitoring/elasticsearch/: elasticsearch.yml  logstash.conf
services/monitoring/grafana/dashboards/: ingestion-dashboard.json  monitoring-dashboard.json  processing-dashboard.json  storage-dashboard.json  tracking-dashboard.json
services/monitoring/loki/: loki-config.yaml
services/monitoring/opentelemetry/: otel-collector-config.yaml  tracing-config.yaml
services/monitoring/prometheus/: alertmanager.yml  alerts.rules.yml  prometheus.yml
services/monitoring/promtail/: promtail-config.yaml
services/processing/: .env  Dockerfile  pyproject.toml
services/processing/src/config/: celery_config.py  tasks.py
services/processing/src/interface/api/: main.py  routes.py
services/status/: Dockerfile
services/status/components/: ServiceCard.tsx
services/status/pages/: index.tsx
services/status/pages/api/: health.ts
services/storage/: .env  Dockerfile  init.sql  pyproject.toml
services/storage/src/infrastructure/: repository.py
services/storage/src/interface/api/: main.py  routes.py
services/tracking/: .env  .env.dev  .env.prod  Dockerfile  Makefile  pyproject.toml
services/tracking/src/app/: main.py  routes.py
services/tracking/src/app/schemas/: __init__.py  assignment.py  base.py  click.py  feedback.py  file_upload.py  forum.py  lesson.py  login.py  logout.py  progress.py  quiz.py
services/tracking/src/app/services/: event_consumer.py  event_processor.py  metrics_collector.py
services/tracking/src/application/services/: event_consumer.py  event_processor.py  metrics_collector.py
services/tracking/src/config/: celery_config.py  settings.py  tasks.py
services/tracking/src/events/: kafka.py
services/tracking/src/infrastructure/: factory.py
services/tracking/src/infrastructure/messaging/: kafka_producer.py  kinesis_producer.py
services/tracking/src/infrastructure/persistence/: dynamo_repository.py  mongo_repository.py
services/tracking/src/interface/api/: main.py  routes.py
services/tracking/src/interface/api/schemas/: assignment.py  base.py  click.py  feedback.py  file_upload.py  forum.py  gamification.py  lesson.py  live_session.py  login.py  logout.py  progress.py  quiz.py
services/tracking/src/monitoring/: grafana_alerts.py  prometheus_metrics.py
services/tracking/src/security/: auth.py
services/tracking/src/utils/: db.py  helpers.py
services/tracking/tests/: test_db.py  test_event_consumer.py  test_event_processor.py  test_logger.py  test_metrics.py  test_routes.py
shared/: logger.py  metrics.py  pyproject.toml  tracing.py
shared/repository/: base_repository.py  kafka_producer.py  mongo_repository.py
