[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion"
version = "0.1.0"
description = "A service for event ingestion and message queue handling"
authors = [
    { name = "Abdel Mejia", email = "abdel.mejia@polygon.us" }
]
license = "MIT"
dependencies = [
    "fastapi~=0.115.8",
    "uvicorn[standard]~=0.34.0",
    "pydantic[email]~=2.10.4",
    "pydantic-settings~=2.7.1",
    "aiokafka~=0.12.0",
    "kafka-python~=2.0.2",
    "boto3~=1.34.50",
    "redis~=5.2.1",
    "celery~=5.4.0",
    "prometheus-client~=0.21.1",
    "prometheus-fastapi-instrumentator~=7.0.2",
    "opentelemetry-api~=1.21.0",
    "opentelemetry-sdk~=1.21.0",
    "opentelemetry-instrumentation-fastapi~=0.38b0",
    "opentelemetry-instrumentation-logging~=0.38b0",
    "opentelemetry-instrumentation-requests~=0.38b0",
    "opentelemetry-exporter-otlp~=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc~=1.21.0",
    "httpx~=0.28.1",
    "orjson~=3.10.15",
    "shared==0.1.0"
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.3",
    "black~=25.1.0",
    "flake8~=7.1.1",
    "isort~=6.0.0",
    "mypy~=1.14.1",
    "pre-commit~=4.1.0",
]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/**"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.envs.default]
path = ".venv"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
