[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storage"
version = "0.1.0"
description = "A service for data storage handling"
authors = [
    { name = "Abdel Mejia", email = "abdel.mejia@polygon.us" }
]
license = "MIT"
dependencies = [
    "fastapi~=0.115.8",
    "uvicorn[standard]~=0.34.0",
    "pymongo~=4.11",
    "motor~=3.7.0",
    "boto3~=1.34.50",
    "shared==0.1.0"
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.3",
    "black~=25.1.0",
    "flake8~=7.1.1",
    "isort~=6.0.0",
    "mypy~=1.14.1",
    "pre-commit~=4.1.0",
]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/**"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.envs.default]
path = ".venv"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
